--- a/practice/prac2.html
+++ b/practice/prac2.html
@@ -9,6 +9,7 @@
         .new {
             color: rgb(231, 59, 11);
             font-size: large;
+            background-color: violet;
             font-weight: bold;
         }
 
