--- a/practice/prac2.html
+++ b/practice/prac2.html
@@ -17,6 +17,7 @@
 
 
 
+
 </head>
 <body>
     <header>practice krtesi</header>
@@ -26,6 +27,7 @@
 
     <ol>
         <li>html krtesi</li>
+        <li>github</li>
         <li>css half krsi</li>
         <li>javascript shuru krbo</li>
         </ol>
