Add font-style property to .new class in prac2.html

--- a/practice/prac2.html
+++ b/practice/prac2.html
@@ -5,11 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
+
+
     <style>
         .new {
             color: rgb(231, 59, 11);
             font-size: large;
             background-color: violet;
+            font-style: initial;
             font-weight: bold;
         }
 
