Fix formatting and add missing newline in prac2.html

--- a/practice/prac2.html
+++ b/practice/prac2.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,13 +16,13 @@
             font-style: initial;
             font-weight: bold;
         }
-
     </style>
 
 
 
 
 </head>
+
 <body>
     <header>practice krtesi</header>
     <p>practice krte krte hapay gelm ami Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, eveniet.</p>
@@ -33,7 +34,12 @@
         <li>github</li>
         <li>css half krsi</li>
         <li>javascript shuru krbo</li>
-        </ol>
+    </ol>
+
+
+    <p style="font-size: 30px;">eitay amr kaj gula regular krte hbe </p>
+
 
 </body>
+
 </html>
