Add missing list items in prac2.html

--- a/practice/prac2.html
+++ b/practice/prac2.html
@@ -38,6 +38,15 @@
 
 
     <p style="font-size: 30px;">eitay amr kaj gula regular krte hbe </p>
+    <ol>
+
+        <LI>GIT a regular push kora</LI>
+        <li></li>
+
+
+
+
+    </ol>
 
 
 </body>
