Fix font size in paragraph for consistency in prac2.html

--- a/practice/prac2.html
+++ b/practice/prac2.html
@@ -37,7 +37,7 @@
     </ol>
 
 
-    <p style="font-size: 30px;">eitay amr kaj gula regular krte hbe </p>
+    <p style="font-size: 20px; border:20px; ">eitay amr kaj gula regular krte hbe </p>
     <ol>
 
         <LI>GIT a regular push kora</LI>
