Fix paragraph styling and add missing list item in prac2.html

--- a/practice/prac2.html
+++ b/practice/prac2.html
@@ -37,11 +37,12 @@
     </ol>
 
 
-    <p style="font-size: 20px; border:20px; ">eitay amr kaj gula regular krte hbe </p>
+    <p style="font-size: 20px;">eitay amr kaj gula regular krte hbe </p>
     <ol>
 
         <LI>GIT a regular push kora</LI>
-        <li></li>
+        <li>html shikha sesh        </li>
+        <li><span style="background-color: cornflowerblue;">css</span>shikha hoitese</li>
 
 
 
