Fix list item styling in prac2.html for consistency

--- a/practice/prac2.html
+++ b/practice/prac2.html
@@ -41,8 +41,8 @@
     <ol>
 
         <LI>GIT a regular push kora</LI>
-        <li>html shikha sesh        </li>
-        <li><span style="background-color: cornflowerblue;">css</span>shikha hoitese</li>
+        <li><span style="background-color: slategray;">html</span> shikha sesh</li>
+        <li><span style="background-color: cornflowerblue;">css</span>shikha hoitese      </li>
 
 
 
