--- a/practice/prac2.html
+++ b/practice/prac2.html
@@ -43,11 +43,11 @@
         <LI><span style="font-size: large;">GIT</span> a regular push kora    </LI>
         <li><span style="background-color: slategray;">html</span> shikha sesh</li>
         <li><span style="background-color: cornflowerblue;">css</span>shikha hoitese           </li>
-
-
-
-
     </ol>
+
+    <h2>i am a big fan of breaking bad</h2>
+    <p>its my one of the favorite series untill now</p>
+    <p>there is some pictures of <a href="" </p>
 
 
 </body>
