Add new HTML files and update link in prac2.html

--- a/practice/prac2.html
+++ b/practice/prac2.html
@@ -47,7 +47,7 @@
 
     <h2>i am a big fan of breaking bad</h2>
     <p>its my one of the favorite series untill now</p>
-    <p>there is some pictures of <a href="" </p>
+    <p>there is some pictures of <a href="breaking.html">click</a> </p>
 
 
 </body>
