--- a/practice/breaking.html
+++ b/practice/breaking.html
@@ -5,15 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+
+
+
         body{
 
             background-color:rgb(90, 132, 48);
         }
 
+
+
+
+
     </style>
 </head>
+        <link rel="stylesheet" href="breaking.css">
 <body>
-        <header>Breaking Bad</header>
+        <header class="new">Breaking Bad</header>
         <div>
             <p>Breaking Bad is an American neo-Western crime drama television series created and produced by Vince Gilligan. Set and filmed in Albuquerque, New Mexico, the series follows Walter White (Bryan Cranston), an underpaid, overqualified, and dispirited high-school chemistry teacher who is struggling with a recent diagnosis of stage-three lung cancer. White turns to a life of crime and partners with a former student, Jesse Pinkman (Aaron Paul), to produce and distribute methamphetamine to secure his family's financial future before he dies, while navigating the dangers of the criminal underworld. Breaking Bad premiered on AMC on January 20, 2008, and concluded on September 29, 2013, after five seasons consisting of 62 episodes.</p>
         </div>
