--- a/html5/vlogs.html
+++ b/html5/vlogs.html
@@ -8,6 +8,20 @@
 
 </head>
 <body>
+
+    <header>
+
+
+    </header>
+
+    <main>
+
+
+    </main>
+
+<footer>
     
+</footer>
+
 </body>
 </html>
