Add navigation structure to header in vlogs.html for improved layout

--- a/html5/vlogs.html
+++ b/html5/vlogs.html
@@ -10,7 +10,17 @@
 <body>
 
     <header>
+        <nav>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">Vlog</a></li>
+                <li><a href="">about us</a></li>
+                <li><a href="">contract</a></li>
+                <li><a href="">support</a></li>
 
+
+            </ul>
+        </nav>
 
     </header>
 
@@ -20,7 +30,7 @@
     </main>
 
 <footer>
-    
+
 </footer>
 
 </body>
