Fix capitalization in navigation links and update CSS for consistency

--- a/html5/vlogs.html
+++ b/html5/vlogs.html
@@ -14,9 +14,9 @@
             <ul>
                 <li><a href="">Home</a></li>
                 <li><a href="">Vlog</a></li>
-                <li><a href="">about us</a></li>
-                <li><a href="">contract</a></li>
-                <li><a href="">support</a></li>
+                <li><a href="">About us</a></li>
+                <li><a href="">Contract</a></li>
+                <li><a href="">Support</a></li>
 
 
             </ul>
