Add article section for traveling vlog in vlogs.html

--- a/html5/vlogs.html
+++ b/html5/vlogs.html
@@ -25,7 +25,16 @@
     </header>
 
     <main>
+            <article>
+                <header>
+                    <h2>My Traveling Vlog</h2>
+                    <p>Visited malibagh</p>
+                
+                
+                </header>
 
+
+            </article>
 
     </main>
 
