Refactor code structure for improved readability and maintainability

--- a/html5/vlogs.html
+++ b/html5/vlogs.html
@@ -29,10 +29,10 @@
                 <header>
                     <h2>My Traveling Vlog</h2>
                     <p>Visited malibagh</p>
-                
-                
                 </header>
-
+                <figure>
+                    <img src="media/breakingbad.jpg" height="150px" alt="photo of breaking bad">
+                </figure>
 
             </article>
 
