Add section and update figcaption in traveling vlog article

--- a/html5/vlogs.html
+++ b/html5/vlogs.html
@@ -32,7 +32,14 @@
                 </header>
                 <figure>
                     <img src="media/breakingbad.jpg" height="150px" alt="photo of breaking bad">
+                    <figcaption>intro of breaking bad</figcaption>
                 </figure>
+                <section>
+
+                    
+                </section>
+
+
 
             </article>
 
