Add missing paragraph and footer content in vlogs.html

--- a/html5/vlogs.html
+++ b/html5/vlogs.html
@@ -36,7 +36,7 @@
                 </figure>
                 <section>
 
-                    
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia eum amet libero excepturi quaerat, ad sit voluptates autem eaque voluptatum tenetur sapiente, cum rem cupiditate molestiae doloribus dolorum totam repudiandae!</p>
                 </section>
 
 
@@ -46,7 +46,7 @@
     </main>
 
 <footer>
-
+        <p><small> &copy;2003 copyright all reserved </small></p>
 </footer>
 
 </body>
