Update footer copyright year and fix spelling in vlogs.html; add footer styling in style.css

--- a/html5/vlogs.html
+++ b/html5/vlogs.html
@@ -46,7 +46,7 @@
     </main>
 
 <footer>
-        <p><small> &copy;2003 copyright all reserved </small></p>
+         <p><small> &copy;2023 Copyright all reserverd. </small></p>
 </footer>
 
 </body>
