Update image tag in traveling vlog article for responsive design

--- a/html5/vlogs.html
+++ b/html5/vlogs.html
@@ -31,7 +31,7 @@
                     <p>Visited malibagh</p>
                 </header>
                 <figure>
-                    <img src="media/breakingbad.jpg" height="150px" alt="photo of breaking bad">
+                    <img width="100%" src="media/breakingbad.jpg" alt="photo of breaking bad">
                     <figcaption>intro of breaking bad</figcaption>
                 </figure>
                 <section>
