Add header and footer sections to form.html; update title and main content

--- a/html5/form.html
+++ b/html5/form.html
@@ -3,9 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>pitha ghor</title>
 </head>
 <body>
     
+        <header>
+
+
+
+        </header>
+<main>
+    <section>
+        <h2>jamal pitha ghor</h2>
+        <form>
+
+            <label for="name">Your Name</label>
+            <input type="text" name="" id="name">
+        </form>
+
+
+    </section>
+
+
+</main>
+
+    <footer>
+
+
+    </footer>
+
 </body>
 </html>
