--- a/html5/vlogs.html
+++ b/html5/vlogs.html
@@ -39,6 +39,10 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia eum amet libero excepturi quaerat, ad sit voluptates autem eaque voluptatum tenetur sapiente, cum rem cupiditate molestiae doloribus dolorum totam repudiandae!</p>
                 </section>
 
+                <section>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia eum amet libero excepturi quaerat, ad sit voluptates autem eaque voluptatum tenetur sapiente, cum rem cupiditate molestiae doloribus dolorum totam repudiandae!</p>
+                </section>
+
 
 
             </article>
