Add additional paragraph to the second section in vlogs.html

--- a/html5/vlogs.html
+++ b/html5/vlogs.html
@@ -41,8 +41,8 @@
 
                 <section>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia eum amet libero excepturi quaerat, ad sit voluptates autem eaque voluptatum tenetur sapiente, cum rem cupiditate molestiae doloribus dolorum totam repudiandae!</p>
+                    <p style="margin: 20px;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores repellat ullam perspiciatis atque magnam hic architecto cupiditate at, nisi quos, quo dolorem voluptas id sint, provident tempore nesciunt commodi accusamus.</p>
                 </section>
-
 
 
             </article>
