Add help link to navigation in vlogs.html

--- a/html5/vlogs.html
+++ b/html5/vlogs.html
@@ -17,6 +17,7 @@
                 <li><a href="">About us</a></li>
                 <li><a href="">Contract</a></li>
                 <li><a href="">Support</a></li>
+                <li><a href="">help</a></li>
 
 
             </ul>
