Remove extra line breaks in the navigation section of vlogs.html

--- a/html5/vlogs.html
+++ b/html5/vlogs.html
@@ -14,12 +14,10 @@
             <ul>
                 <li><a href="">Home</a></li>
                 <li><a href="">Vlog</a></li>
-                <li><a href="">About us</a></li>
+                <li><a href="">About Us</a></li>
                 <li><a href="">Contract</a></li>
                 <li><a href="">Support</a></li>
                 <li><a href="">help</a></li>
-
-
             </ul>
         </nav>
 
