Capitalize "Help" in the navigation section of vlogs.html

--- a/html5/vlogs.html
+++ b/html5/vlogs.html
@@ -17,7 +17,7 @@
                 <li><a href="">About Us</a></li>
                 <li><a href="">Contract</a></li>
                 <li><a href="">Support</a></li>
-                <li><a href="">help</a></li>
+                <li><a href="">Help</a></li>
             </ul>
         </nav>
 
