--- a/html5/vlogs.html
+++ b/html5/vlogs.html
@@ -26,7 +26,7 @@
     <main>
             <article>
                 <header>
-                    <h2>My Traveling Vlog</h2>
+                    <h2>My Traveling Vlogs</h2>
                     <p>Visited malibagh</p>
                 </header>
                 <figure>
