Correct typo in the visited location in vlogs.html

--- a/html5/vlogs.html
+++ b/html5/vlogs.html
@@ -27,7 +27,7 @@
             <article>
                 <header>
                     <h2>My Traveling Vlogs</h2>
-                    <p>Visited malibagh</p>
+                    <p>Visited <Malibagh</p>
                 </header>
                 <figure>
                     <img width="150%" src="media/breakingbad.jpg" alt="photo of breaking bad">
