Update alt text for image in vlogs.html

--- a/html5/vlogs.html
+++ b/html5/vlogs.html
@@ -30,8 +30,8 @@
                     <p>Visited Malibagh</p>
                 </header>
                 <figure>
-                    <img width="150%" src="media/breakingbad.jpg" alt="photo of breaking bad">
-                    <figcaption>intro of breaking bad</figcaption>
+                    <img width="150%" src="media/breakingbad.jpg" alt="intro of breaking bad">
+                    <figcaption>Intro of breaking bad</figcaption>
                 </figure>
                 <section>
 
