Capitalize "Bad" in figcaption for consistency in vlogs.html

--- a/html5/vlogs.html
+++ b/html5/vlogs.html
@@ -31,7 +31,7 @@
                 </header>
                 <figure>
                     <img width="150%" src="media/breakingbad.jpg" alt="intro of breaking bad">
-                    <figcaption>Intro Of Breaking bad</figcaption>
+                    <figcaption>Intro Of Breaking Bad</figcaption>
                 </figure>
                 <section>
 
