Refactor form.html to improve structure and add missing labels

--- a/html5/form.html
+++ b/html5/form.html
@@ -18,8 +18,17 @@
             <h2>Jamal Mayer Pitha ghor</h2>
 
             <form>
+                <label for="name">Your name</label>
+                <input type="text" name="" id="name">
 
-            
+                <label for="email">Your email</label>
+                <input type="email" name="" id="email">
+
+                <fieldset>
+                    <label for="">chitoi</label>    
+                    <input type="radio" name="" id="">
+
+                </fieldset>
 
             </form>
 
