Add missing legend to fieldset in form.html for better accessibility

--- a/html5/form.html
+++ b/html5/form.html
@@ -25,6 +25,8 @@
                 <input type="email" name="" id="email">
 
                 <fieldset>
+                    <legend>pitha info</legend>
+
                     <label for="">chitoi</label>                        
                     <input type="radio" name="" id="">
 
