Add missing radio button for "dal puri" option in form.html

--- a/html5/form.html
+++ b/html5/form.html
@@ -34,9 +34,13 @@
                     <label for="bhapa">bhapa</label>                        
                     <input type="radio" name="" id="bhapa">
 
-
+                    <label for="puri">dal puri</label>
+                    <input type="radio" name="" id="puri">
 
                 </fieldset>
+
+
+                
 
             </form>
 
