Add missing fieldset for "borta selection" in form.html

--- a/html5/form.html
+++ b/html5/form.html
@@ -39,8 +39,13 @@
 
                 </fieldset>
 
+                <fieldset>
 
-                
+                    <legend>borta selection</legend>
+
+
+                </fieldset>
+
 
             </form>
 
