Fix label for checkbox in borta selection fieldset

--- a/html5/form.html
+++ b/html5/form.html
@@ -43,7 +43,7 @@
 
                     <legend>borta selection</legend>
                     <input type="checkbox" name="" id="">
-                    <label for="shorisha r borta"></label>
+                    <label for="">shorisha bortha</label>
 
                 </fieldset>
 
