Fix checkbox input and label for "shorisha bortha" in borta selection fieldset

--- a/html5/form.html
+++ b/html5/form.html
@@ -42,8 +42,8 @@
                 <fieldset>
 
                     <legend>borta selection</legend>
-                    <input type="checkbox" name="" id="">
-                    <label for="">shorisha bortha</label>
+                    <input type="checkbox" name="" id="shorisha">
+                    <label for="shorisha">shorisha bortha</label>
 
                 </fieldset>
 
