Add extra info fieldset with textarea in the form

--- a/html5/form.html
+++ b/html5/form.html
@@ -52,6 +52,15 @@
                 </fieldset>
 
 
+                <fieldset>
+
+                    <legend>Extra Info</legend>
+                    <textarea cols="50" rows="5" name="" id=""></textarea>
+
+
+                </fieldset>
+
+
             </form>
 
         </section>
