Refactor form structure by wrapping basic info fields in a fieldset

--- a/html5/form.html
+++ b/html5/form.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pitha Ghor</title>
+
+    <style>
+        form .basic label, .
+
+
+    </style>
+
+
 </head> 
 <body>
 
@@ -18,11 +26,17 @@
             <h2>Jamal Mayer Pitha ghor</h2>
 
             <form>
-                <label for="name">Your name</label>
+               <fieldset class="basic">
+
+                <legend>Basic Info</legend>
+                 <label for="name">Your name</label>
                 <input type="text" name="" id="name">
 
                 <label for="email">Your email</label>
                 <input type="email" name="" id="email">
+
+
+               </fieldset>
 
                 <fieldset>
                     <legend>pitha info</legend>
