--- a/html5/form.html
+++ b/html5/form.html
@@ -6,7 +6,11 @@
     <title>Pitha Ghor</title>
 
     <style>
-        form .basic label, .
+        form .basic label
+        {
+            display: block;
+            margin-top: 10px;
+        }
 
 
     </style>
