Add main structure and table info to HTML document

--- a/html5/table.html
+++ b/html5/table.html
@@ -6,11 +6,30 @@
     <title>Document</title>
 </head>
 <body>
+    <main>
+
+        <h2>Friends</h2>
+        <table>
+
+            <thead>
+
+            </thead>
+
+        </table>
+
+
+    </main>
     <section>
 
         <h2>Table Info</h2>
 
+        <ul>
+            <li>table: table </li>
+            <li>table head : thead </li>
+            <li>table body: tbody</li>
 
+
+        </ul>
 
     </section>
 </body>
