--- a/html5/table.html
+++ b/html5/table.html
@@ -16,7 +16,7 @@
             </thead>
 
             <tbody>
-                
+
             </tbody>
 
         </table>
@@ -31,6 +31,7 @@
             <li>table: table </li>
             <li>table head : thead </li>
             <li>table body: tbody</li>
+            <li>table foot : tfoot</li>
 
 
         </ul>
