--- a/html5/table.html
+++ b/html5/table.html
@@ -20,7 +20,7 @@
             </tbody>
 
             <tfoot>
-                
+
             </tfoot>
 
         </table>
@@ -36,6 +36,7 @@
             <li>table head : thead </li>
             <li>table body: tbody</li>
             <li>table foot : tfoot</li>
+            <li>table row : tr</li>
 
 
         </ul>
