Add additional rows to tbody for friends list

--- a/html5/table.html
+++ b/html5/table.html
@@ -30,6 +30,40 @@
                         10
                     </td>
                 </tr>
+
+                <tr>
+                    <td>
+                        2
+                    </td>
+                    <td>
+                        sam
+                    </td>
+                    <td>
+                        gf
+                    </td>
+                    <td>
+                        50
+                    </td>
+
+                </tr>
+
+                <tr>
+                    <td>
+                        3
+                    </td>
+                    <td>
+                        rid
+                    </td>
+                    <td>
+                        cousin
+                    </td>
+                    <td>
+                        30
+                    </td>
+
+
+                </tr>
+
             </tbody>
 
             <tfoot>
