Add table headers for friends list and update styling

--- a/html5/table.html
+++ b/html5/table.html
@@ -8,9 +8,11 @@
     <style>
         table{
             border-collapse: collapse;
+           
         }
-        td{
+        td , th{
             border: 1px solid black;
+            padding: 10px 20px  ;
         }
 
 
@@ -25,7 +27,20 @@
         <table>
 
             <thead>
-
+                <tr>
+                    <th>
+                        no.
+                    </th>
+                    <th>
+                        name
+                    </th>
+                    <th>
+                        relation
+                    </th>
+                    <th>
+                        point
+                    </th>
+                </tr>
             </thead>
 
             <tbody>
@@ -98,6 +113,7 @@
             <li>table foot : tfoot</li>
             <li>table row : tr</li>
             <li>table data : td</li>
+            <li>table head data:th </li>
 
 
         </ul>
