Add missing caption and update footer for friends table

--- a/html5/table.html
+++ b/html5/table.html
@@ -25,7 +25,7 @@
 
         <h2>Friends</h2>
         <table>
-
+            <caption>My Collection</caption>
             <thead>
                 <tr>
                     <th>
@@ -95,7 +95,7 @@
             </tbody>
 
             <tfoot>
-
+                <td colspan="2">Total Friends:4</td>
             </tfoot>
 
         </table>
