Capitalize 'Name' in the friends table header

--- a/html5/table.html
+++ b/html5/table.html
@@ -32,7 +32,7 @@
                         no.
                     </th>
                     <th>
-                        name
+                        Name
                     </th>
                     <th>
                         relation
