--- a/html5/table.html
+++ b/html5/table.html
@@ -35,7 +35,7 @@
                         Name
                     </th>
                     <th>
-                        relation
+                        Relation
                     </th>
                     <th>
                         point
