Capitalize 'Point' in the friends table header

--- a/html5/table.html
+++ b/html5/table.html
@@ -38,7 +38,7 @@
                         Relation
                     </th>
                     <th>
-                        point
+                        Point
                     </th>
                 </tr>
             </thead>
