--- a/html5/flex.html
+++ b/html5/flex.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flex Box</title>
+
+    <style>
+
+        .container div  {
+            border: 2px solid tomato;
+        }
+
+
+    </style>
+
+
+
 </head>
 <body>
-        <div>
+        <div class="container">
             <div>1</div>
             <div>2</div>
             <div>3</div>
