--- a/html5/flex.html
+++ b/html5/flex.html
@@ -9,6 +9,8 @@
 
         .container div  {
             border: 2px solid tomato;
+            height: 10px;
+            font-size: 3em;
         }
 
 
