Update border color in flex.html and remove height and font-size properties from container div

--- a/html5/flex.html
+++ b/html5/flex.html
@@ -7,13 +7,11 @@
 
     <style>
 
-        .container div  {
-            border: 2px solid tomato;
-            height: 8px;
-            font-size: 3em;
+
+        .container div{
+
+            border: 2px solid pink;
         }
-
-
     </style>
 
 
