--- a/html5/flex.html
+++ b/html5/flex.html
@@ -11,6 +11,8 @@
         .container div{
 
             border: 2px solid pink;
+            height: 50px;
+            font-size: 3em;
         }
     </style>
 
