Refactor newf.html to improve class usage and enhance styling consistency

--- a/practice/newf.html
+++ b/practice/newf.html
@@ -12,6 +12,14 @@
             font-size: 2em;
         }
 
+
+        .black{
+            font-weight: 800;
+        }
+
+
+
+
     </style>
 
 
@@ -20,12 +28,12 @@
         <h1>hello</h1>
     
         
-        <p>this is n1</p>
+        <p class="bee">this is n1</p>
         <p>this is ne2</p>
-        <p class="green">this is ne3</p>
+        <p class="green black">this is ne3</p>
         <p>this is ne4</p>
         <p>this is ne5</p>
-        <p>this is ne6</p>
+        <p class="black">this is ne6</p>
         <p>this is ne7</p>
 
 </body>
