--- a/practice/border.html
+++ b/practice/border.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+
+   <style>
+
+    .fuck{
+        font-size: small;
+    }
+
+
+
+   </style>
+
+
 </head>
 <body>
-    <div>
+
+
+    <div class="fuck">
 
         <h2>first vlog</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, voluptate.</p>
@@ -16,27 +31,8 @@
 
     </div>
 
-     <div>
 
-        <h2>first vlog</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, voluptate.</p>
-
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga impedit consequatur necessitatibus sequi. Ad delectus quisquam non voluptatum. Laudantium, rerum!</p>
-
-
-    </div>
-    
-    <div>
-
-        <h2>first vlog</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, voluptate.</p>
-
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga impedit consequatur necessitatibus sequi. Ad delectus quisquam non voluptatum. Laudantium, rerum!</p>
-
-
-    </div>
-    
-    <div>
+     <div class="fuck">
 
         <h2>first vlog</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, voluptate.</p>
